[gd_scene load_steps=23 format=2]

[ext_resource path="res://DefaultEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://Packed/Reap2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Scene1.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-openvr/scenes/ovr_controller.tscn" type="PackedScene" id=5]
[ext_resource path="res://Packed/GrippedSwordOld.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/EntitySounds.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sounds/PlayerHop.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/GustDash.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/WeaveDash.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Textures/Texture2.png" type="Texture" id=11]
[ext_resource path="res://Scripts/DebugTimer.gd" type="Script" id=12]
[ext_resource path="res://Assets/Sounds/Nocturnal (8 Bit Jazz).ogg" type="AudioStream" id=13]
[ext_resource path="res://Packed/TerrainBlock.tscn" type="PackedScene" id=14]

[sub_resource type="CubeMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 1, 1, 20 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=2]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0, 0.0625, 1, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 0, 0, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="CapsuleShape" id=4]

radius = 0.5
height = 1.0

[sub_resource type="CubeMesh" id=5]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=6]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
albedo_texture = ExtResource( 11 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="BoxShape" id=7]

extents = Vector3( 20.0283, 0.106169, 20.0483 )

[sub_resource type="AudioStreamRandomPitch" id=8]

audio_stream = ExtResource( 13 )
random_pitch = 1.1

[node name="Root" type="Spatial" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.20629, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]

environment = ExtResource( 1 )

[node name="Enemies" type="Spatial" parent="." index="1"]

_sections_unfolded = [ "Transform" ]

[node name="Reap" parent="Enemies" index="0" instance=ExtResource( 2 )]

transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, -16.302 )

[node name="Player" type="KinematicBody" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.84789, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="ARVROrigin" type="ARVROrigin" parent="Player" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.29652, 0 )
world_scale = 1.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="ARVRCamera" type="ARVRCamera" parent="Player/ARVROrigin" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.03161 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

[node name="WeaveLeftTarget" type="Spatial" parent="Player/ARVROrigin/ARVRCamera" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="Player/ARVROrigin/ARVRCamera/WeaveLeftTarget" index="0"]

visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "material" ]

[node name="WeaveRightTarget" type="Spatial" parent="Player/ARVROrigin/ARVRCamera" index="1"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance2" type="MeshInstance" parent="Player/ARVROrigin/ARVRCamera/WeaveRightTarget" index="0"]

visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="OVRControllerLeft" parent="Player/ARVROrigin" index="1" instance=ExtResource( 5 )]

[node name="OVRControllerRight" parent="Player/ARVROrigin" index="2" instance=ExtResource( 5 )]

controller_id = 2
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="GrippedSword" parent="Player/ARVROrigin/OVRControllerRight" index="1" instance=ExtResource( 6 )]

[node name="CollisionShape" type="CollisionShape" parent="Player" index="1"]

transform = Transform( 1, 0, 0, 0, -7.78286e-008, -1.78051, 0, 1, -4.37114e-008, 0, -2.51308, 0 )
shape = SubResource( 4 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Sounds" type="Spatial" parent="Player" index="2"]

editor/display_folded = true
script = ExtResource( 7 )

[node name="Hop" type="AudioStreamPlayer" parent="Player/Sounds" index="0"]

stream = ExtResource( 8 )
volume_db = 1.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GustDash" type="AudioStreamPlayer" parent="Player/Sounds" index="1"]

stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="WeaveDash" type="AudioStreamPlayer" parent="Player/Sounds" index="2"]

stream = ExtResource( 10 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AirDashTimer" type="Timer" parent="Player" index="3"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="HitFloatTimer" type="Timer" parent="Player" index="4"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="LevGround" type="StaticBody" parent="." index="3"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="LevGround" index="0"]

transform = Transform( 20, 0, 0, 0, 0.1, 0, 0, 0, 20, 0, 0.224327, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 5 )
skeleton = NodePath("..")
material/0 = SubResource( 6 )
_sections_unfolded = [ "Transform", "material" ]

[node name="CollisionShape" type="CollisionShape" parent="LevGround" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.256514, 0 )
shape = SubResource( 7 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="DebugTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false
script = ExtResource( 12 )

[node name="EnvironmentSounds" type="Spatial" parent="." index="5"]

[node name="Music" type="AudioStreamPlayer" parent="EnvironmentSounds" index="0"]

stream = SubResource( 8 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Gazebo" type="Spatial" parent="." index="6"]

editor/display_folded = true
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="TerrainBlock" parent="Gazebo" index="0" instance=ExtResource( 14 )]

transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 4.05728, 7.58023 )

[node name="TerrainBlock3" parent="Gazebo" index="1" instance=ExtResource( 14 )]

transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, -0.0742464, 4.05728, 13.9573 )

[node name="TerrainBlock2" parent="Gazebo" index="2" instance=ExtResource( 14 )]

transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 11.2575, 4.05728, 7.58023 )

[node name="TerrainBlock4" parent="Gazebo" index="3" instance=ExtResource( 14 )]

transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 11.2984, 4.05728, 13.9923 )

[node name="TerrainBlock5" parent="Gazebo" index="4" instance=ExtResource( 14 )]

transform = Transform( 6.74583, 0, 0, 0, 0.408815, 0, 0, 0, 4.13502, 5.62435, 9.64941, 10.815 )

[node name="Sun" type="DirectionalLight" parent="." index="7"]

transform = Transform( 0.766045, 0.321394, -0.55667, 1.0076e-007, 0.866025, 0.5, 0.642788, -0.383022, 0.663414, 0, 13, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.4
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[connection signal="button_pressed" from="Player/ARVROrigin/OVRControllerLeft" to="Player" method="_on_OVRControllerLeft_button_pressed"]

[connection signal="button_release" from="Player/ARVROrigin/OVRControllerLeft" to="Player" method="_on_OVRControllerLeft_button_release"]

[connection signal="button_pressed" from="Player/ARVROrigin/OVRControllerRight" to="Player" method="_on_OVRControllerRight_button_pressed"]

[connection signal="button_release" from="Player/ARVROrigin/OVRControllerRight" to="Player" method="_on_OVRControllerRight_button_release"]

[connection signal="timeout" from="Player/AirDashTimer" to="Player" method="_on_AirDashTimer_timeout"]

[connection signal="timeout" from="Player/HitFloatTimer" to="Player" method="_on_AirDashTimer_timeout"]

[connection signal="timeout" from="DebugTimer" to="DebugTimer" method="_on_DebugTimer_timeout"]


